--- a/themes/ingenioart/style.css
+++ b/themes/ingenioart/style.css
@@ -24,6 +24,8 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import url("css/fancybox/jquery.fancybox.css"); 
 /* parsley */
 @import url("css/parsley.css"); 
+/* rev slider */
+@import url("css/revslider.css"); 
 /* slidebars */
 @import url("css/slidebars.min.css"); 
 /* archivo master */
