--- a/themes/ingenioart/css/master.sass
+++ b/themes/ingenioart/css/master.sass
@@ -105,6 +105,25 @@ body,html
 		color          : white  
 		text-decoration: none
 		+scale( 1.2 )
+//Variación color naranja
+.btn__show-more--orange 
+	background: $ingenioart_orange
+
+//Flechas de Slider en común
+.arrow__common-slider
+	color          : $ingenioart_blue
+	font-size      : 34px
+	margin         : -22px auto 0
+	position       : absolute
+	text-decoration: none
+	top            : 50%
+	z-index        : 999
+//Variaciones
+.arrow__common-slider--prev
+	left: -40px
+.arrow__common-slider--next
+	right: -40px
+
 
 //Mapa
 #canvas-map
@@ -422,24 +441,96 @@ body,html
 	.pageInicio_clientes__gallery
 		margin : 70px auto 0
 		padding: 0 40px 
-	//Flechas de carousel clientes
-	.arrow__cliente
-		color          : $ingenioart_blue
-		font-size      : 34px 
-		margin         : -22px auto 0
-		position       : absolute
-		text-decoration: none
-		top            : 50% 
-		z-index        : 999
-	.arrow__cliente--prev
-		left: -40px
-	.arrow__cliente--next
-		right: -40px
 
 //Sección Portafolio
 .pageInicio__portafolio
 	background: $ingenioart_gray
 	padding   : 60px 0 0 0
+//Contenedor de imagenes portafolio
+.pageInicio__portafolio__content
+	margin: 47px auto 0
+	//Articulos / items 
+	.item-proyecto
+		width: 33.33%
+		//Imagen
+		figure 
+			margin: 0 auto
+		//Hover Item proyectos
+		&:hover 
+			.item-proyecto__links
+				+opacity( 1 )
+				z-index: 1
+				+box-shadow( inset 0 0px 0 160px rgba( 0, 188, 231, .7 ) )
+
+	//Seccion Links del artículo
+	.item-proyecto__links
+		+transition( opacity 600ms ease-in-out , box-shadow 400ms ease-in-out )
+		+opacity( 0 )
+		+box-shadow( inset 0 0 0 0px transparent )
+		bottom    : 0
+		left      : 0
+		position  : absolute
+		right     : 0
+		top       : 0
+		z-index   : -1
+		//Botones - a 
+		.btn__link 
+			border     : 1px solid
+			color      : white
+			font-size  : 26px
+			line-height: 1em
+			margin     : 0 8px
+			padding    : 15px
+		//Titulo
+		h3 
+			color    : white 
+			font-size: 20px
+			margin   : 17px auto 
+			width    : 100%
+
+//Banner a portafolio
+.pageInicio__portafolio__banner
+	background : $ingenioart_blue
+	color      : white 
+	font-family: "BloggerSans"
+	padding    : 32px 0 
+	//Titulo
+	h2 
+		font-size: 1.75em /*28px*/ 
+		margin   : 0 39px
+
+//Sección Blog
+.pageInicio__blog
+	padding: 35px 0 33px
+	//Articulos
+	.item-blog
+		padding    : 0 0 10px 
+		//Fecha 
+		figcaption 
+			background : $ingenioart_blue
+			color      : white 
+			font-family: "Bebas"
+			font-size  : 30px
+			height     : 90px
+			line-height: 1em
+			padding    : 0 4%
+			position   : absolute
+			top        : 0
+			width      : 90px
+		//Titulo
+		h2 
+			font-family: "Bebas"
+			color      : $ingenioart_blue
+	//Extracto de articulo
+	.item-blog__excerpt
+		font-family: "BloggerSans"
+		p 
+			color      : black 
+			line-height: 1.4em
+
+//Carousel Blog Container
+.pageInicio__blog__carousel
+	padding: 0 30px
 
 /***************************************************************************************/
 /**-------------------------- PÁGINA NOSOTROS  ---------------------------------------**/
