update pagina contacto

--- a/themes/ingenioart/css/master.sass
+++ b/themes/ingenioart/css/master.sass
@@ -140,11 +140,6 @@ body,html
 		font-weight: 600
 
 
-//Mapa
-#canvas-map
-	height: 317px
-	width : 100%
-
 
 /***************************************************************************************/
 /**-------------------- SECCIONES - PAGINAS EN COMUN  --------------------------------**/
@@ -971,6 +966,34 @@ body,html
 .pageContacto__consulta
 	background: $ingenioart_gray_claro
 	padding   : 50px 0 118px
+
+//Sección de Cuentas Bancarias
+.pageContacto__list-bank
+	padding        : 0 25%
+	list-style-type: none
+	li 
+		margin: 35px auto 0px
+		p 
+			font-size: 14px 
+			margin   : 0 auto 
+
+//Sección de Mapas
+.pageContacto__maps
+	margin: 40px auto 0
+//Contenedor sección 
+.pageContacto__maps__container
+	margin: 30px auto 0
+	//Titulos
+	h2
+		color      : black 
+		font-family: "BloggerSans"
+		font-size  : 35px
+		font-weight: 700  
+//Mapa
+.canvas-map
+	height: 450px
+	width : 100%
+
 
 /***************************************************************************************/
 /**-------------------------------  MAIN FOOTER  -------------------------------------**/
